--- a/client/pom.xml
+++ b/client/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.theokanning.openai-gpt3-java</groupId>
+        <groupId>io.github.lambdua</groupId>
         <artifactId>openai-java</artifactId>
         <version>0.18.2</version>
     </parent>
@@ -18,7 +18,7 @@
     <dependencies>
         <!-- API Module Dependency -->
         <dependency>
-            <groupId>com.theokanning.openai-gpt3-java</groupId>
+            <groupId>io.github.lambdua</groupId>
             <artifactId>api</artifactId>
             <version>${project.version}</version>
         </dependency>
