--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.theokanning.openai-gpt3-java</groupId>
+    <groupId>io.github.lambdua</groupId>
     <artifactId>openai-java</artifactId>
     <version>0.18.2</version>
     <packaging>pom</packaging>
-
+    <description>openai java 版本</description>
+    <url>https://github.com/Lambdua/openai-java</url>
     <name>openai-java</name>
-    <url>https://github.com/theokanning/openai-java</url>
     <licenses>
         <license>
             <name>The MIT License</name>
@@ -22,8 +22,16 @@
             <id>theokanning</id>
             <name>Theo Kanning</name>
         </developer>
+        <developer>
+            <id>Lambdua</id>
+            <name>Liang Tao</name>
+        </developer>
     </developers>
-
+    <scm>
+        <connection>https://github.com/Lambdua/openai-java.git</connection>
+        <developerConnection>scm:git:ssh://git@ssh.github.com:443/Lambdua/openai-java.git </developerConnection>
+        <url>https://github.com/Lambdua/openai-java</url>
+    </scm>
 
     <properties>
         <java.version>1.8</java.version>
@@ -53,24 +61,6 @@
             <artifactId>junit-jupiter</artifactId>
             <version>5.10.1</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.junit.jupiter</groupId>-->
-<!--            <artifactId>junit-jupiter-engine</artifactId>-->
-<!--            <version>5.7.0</version>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.junit.jupiter</groupId>-->
-<!--            <artifactId>junit-jupiter-api</artifactId>-->
-<!--            <version>5.7.0</version>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.junit.jupiter</groupId>-->
-<!--            <artifactId>junit-jupiter-params</artifactId>-->
-<!--            <version>5.7.0</version>-->
-<!--            <scope>test</scope>-->
-<!--        </dependency>-->
         <!-- Retrofit Mock -->
         <dependency>
             <groupId>com.squareup.retrofit2</groupId>
@@ -82,19 +72,77 @@
 
 
     <build>
-        <pluginManagement>
-            <plugins>
-                <!-- Maven 插件配置，例如 maven-compiler-plugin 等 -->
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.10.1</version>
-                    <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+            <!--   central发布插件    -->
+            <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>0.4.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <publishingServerId>Lambdua</publishingServerId>
+                    <tokenAuth>true</tokenAuth>
+                </configuration>
+            </plugin>
+            <!--   source源码插件 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!--   javadoc插件 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <additionalparam>-Xdoclint:none</additionalparam> <!-- 关闭所有 Javadoc lint 警告 -->
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>1.5</version>
+                <configuration>
+                    <executable>D:\Git\usr\bin\gpg.exe</executable>
+                    <keyname>lambdua</keyname>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+
     </build>
 </project>
