--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -4,9 +4,11 @@
 name: Publish package to the Maven Central Repository
 
 on:
-  release:
-    types: [created]
-
+  push:
+    tags:
+      - 'v*'
+#  release:
+#    types: [created]
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -17,13 +19,17 @@ jobs:
         with:
           java-version: '8'
           distribution: 'temurin'
-          server-id: central
+          server-id: Lambdua
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
           gpg-private-key: ${{ secrets.GPG_SIGNING_KEY }}
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
-      - name: Set version
-        run: mvn versions:set -DnewVersion=${{ github.event.release.tag_name }}
+      - name: set publish version
+        run: |
+          VERSION=${{ github.event.release.tag_name }}
+          VERSION=${VERSION:1}
+          echo "Tag detected: $VERSION , performing build and publish..."
+          mvn versions:set -DnewVersion=$VERSION
       - name: Publish package
         run: mvn -P release --batch-mode deploy -DskipTests
         env:
