--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -7,8 +7,6 @@ on:
   push:
     tags:
       - 'v*'
-#  release:
-#    types: [created]
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -26,8 +24,7 @@ jobs:
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
       - name: set publish version
         run: |
-          VERSION=${{ github.event.release.tag_name }}
-          VERSION=${VERSION:1}
+          VERSION=$(echo ${{ github.event.release.tag_name }} | sed 's/^v//')
           echo "Tag detected: $VERSION , performing build and publish..."
           mvn versions:set -DnewVersion=$VERSION
       - name: Publish package
