--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -4,9 +4,8 @@
 name: Publish package to the Maven Central Repository
 
 on:
-  push:
-    tags:
-      - 'v*'
+  release:
+    types: [ created ]
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -23,10 +22,7 @@ jobs:
           gpg-private-key: ${{ secrets.GPG_SIGNING_KEY }}
           gpg-passphrase: MAVEN_GPG_PASSPHRASE
       - name: set publish version
-        run: |
-          VERSION=$(echo ${{ github.event.release.tag_name }} | sed 's/^v//')
-          echo "Tag detected: $VERSION , performing build and publish..."
-          mvn versions:set -DnewVersion=$VERSION
+        run: mvn versions:set -DnewVersion=${{ github.event.release.tag_name }}
       - name: Publish package
         run: mvn -P release --batch-mode deploy -DskipTests
         env:
