function 定义重构;统一使用方式

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -33,6 +33,17 @@
             <artifactId>jtokkit</artifactId>
             <version>0.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.kjetland</groupId>
+            <artifactId>mbknor-jackson-jsonschema_2.12</artifactId>
+            <version>1.0.39</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jackson-databind</artifactId>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 
 </project>
